--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 ﻿<!doctype html>
 <html>
+
 <head>
   <title>Unicórnios são de Verdade</title>
+  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
   <div id="cabecalho">
-    <h1>Unicórnios são de Verdade</h1>
-    <h2>desvendando o mito...</h2>
+    <span class="titulo"><h1>Unicórnios são de Verdade</h1></span>
+    <span class="sub"><h2>desvendando o mito...</h2></span>
   </div>
 
   <div id="verdade">
-    <img src="images/unicorn.jpg">
-    <h2>A verdade oculta</h2>
+    <img src="images/unicorn.jpg" id="true">
+    <h2 id="verdade">A verdade oculta</h2>
     <p>
       Por muito tempo acreditou-se que os unicórnios haviam sido extintos ou
       até mesmo que eles nunca existiram. Contudo, trabalhos recentes de
@@ -33,10 +36,10 @@
       criaturas uni-chifre.
     </p>
 
-    <p class="referencia">
+    <p class="referencia"><i>
       McKee, A.  Adendo à música do Unicórnio, 2012. Disponível em
       http://en.wikipedia.org/wiki/The_Unicorn_(song)
-    </p>
+    </p></i>
     <audio src="audio/brobdingnagianbards_theunicornsong.mp3" controls></audio>
   </div>
 
